change the view of initial page

--- a/html/initial.html
+++ b/html/initial.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../css/initial.css">
 </head>
 <body>
-	<button id="sub"></button>
+	<button id="challengeSelf"></button>
+	<button id="challengeFriends"></button>
 	<script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="../js/initial.js"></script>
     <script src="../js/bootstrap.min.js"></script>
