create recordForShow page

--- a/html/challenge.html
+++ b/html/challenge.html
@@ -13,24 +13,34 @@
         <div class="edit">
             <div class="head">
                 <div class="label">
-                    类型
+                    尊姓大名
                 </div>
                 <div class="triangle">
                 </div>
             </div>
-            <textarea rows="1" maxlength="7" placeholder="~如我要健身，我要变美"></textarea>  
+            <textarea rows="1" maxlength="7" placeholder="弘桂"></textarea>  
         </div>  
         <div class="edit">
             <div class="head">
                 <div class="label">
-                    内容
+                    关键字
                 </div>
                 <div class="triangle">
                 </div>
             </div>
 
-            <textarea rows="2" maxlength="36" placeholder="请输入挑战内容，如明天我要早起"></textarea>  
+            <textarea rows="1" maxlength="7" placeholder="瘦身"></textarea>  
         </div>  
+        <div class="edit">
+            <div class="head">
+                <div class="label">
+                    挑战内容
+                </div>
+                <div class="triangle">
+                </div>
+            </div>
+            <textarea rows="4" maxlength="36" placeholder="一个月内不瘦十斤，我请所有为我点赞的人吃饭"></textarea>  
+        </div>
         <div class="edit">
             <div class="head">
                 <div class="label">
@@ -40,7 +50,7 @@
                 </div>
             </div>
 
-            <textarea rows="4" maxlength="28" placeholder="不成功便成仁，逼一下自己去完成挑战吧"></textarea>  
+            <textarea rows="2" maxlength="28" placeholder="请所有为我点赞的人吃饭"></textarea>  
         </div>  
         <div class="edit">
             <div class="head">
