complete the html/css of challenge

--- a/html/battle.html
+++ b/html/battle.html
@@ -6,6 +6,7 @@
     <title>壹校招一战到底</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/challenge.css">
+    <link rel="stylesheet" type="text/css" href="../css/battle.css">
 </head>
 <body>
     <div id="tipBg"></div>
@@ -19,6 +20,16 @@
                 </div>
             </div>
             <textarea id="name" rows="1" maxlength="7" placeholder="弘桂"></textarea>  
+        </div>  
+        <div class="edit">
+            <div class="head">
+                <div class="label">
+                    好友名字
+                </div>
+                <div class="triangle">
+                </div>
+            </div>
+            <textarea id="competitor" rows="1" maxlength="7" placeholder="婉频"></textarea>  
         </div>  
         <div class="edit">
             <div class="head">
@@ -63,9 +74,9 @@
             <div id="recommend" ><p>弘桂要在1分钟内吃两碗饭,你信吗>></p></div>
         </div>
     </div>  
-    <button id="challengeGo">挑战自己</button>
+    <button id="challengeGo">挑战他人</button>
     <div id="ad"><div id="logo"></div><a>来壹校招，挑战找工作</a><div>
     <script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="../js/challenge.js"></script>
+    <script type="text/javascript" src="../js/battle.js"></script>
 </body>
 </html>
