--- a/html/battleRecord.html
+++ b/html/battleRecord.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>壹校招一战到底</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/recordForShow.css">
+    <link rel="stylesheet" type="text/css" href="../css/record.css">
+    <link rel="stylesheet" type="text/css" href="../css/battleRecord.css">
 </head>
 <body>
     <div id="resultBg1"></div>
@@ -13,7 +14,7 @@
     <div id="outline">
         <div id="face"></div>
         <div id="content">
-            <div class="firstline">“蔡依林”发起了挑战</div>
+            <div class="firstline">“蔡依林”向“林某某”发起了挑战</div>
             <div class="secondline">一个月内减肥十斤一个月内减肥你信吗</div>
         </div>
         <div id="stake">
@@ -22,8 +23,8 @@
         </div>
         <button id="back"></button>
     </div>
-    <button id="like"></button>
-    <button id="unlike"></button>
+    <button id="success"></button>
+    <button id="fail"></button>
     <div id="comment">
         围观群众们：
         <ul id="commentList">
@@ -55,6 +56,6 @@
     </div>
     <div id="ad"><div id="logo"></div><a>来壹校招，挑战找工作</a><div>
     <script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="../js/recordForShow.js"></script>
+    <script type="text/javascript" src="../js/battleRecord.js"></script>
 </body>
 </html>
