--- a/html/battleRecordForShow.html
+++ b/html/battleRecordForShow.html
@@ -13,7 +13,7 @@
     <div id="outline">
         <div id="face"></div>
         <div id="content">
-            <div class="firstline">“蔡依林”发起了挑战</div>
+            <div class="firstline">“蔡依林”向“林某某”发起了挑战</div>
             <div class="secondline">一个月内减肥十斤一个月内减肥你信吗</div>
         </div>
         <div id="stake">
