--- a/html/record.html
+++ b/html/record.html
@@ -20,9 +20,40 @@
             <p class="firstline">他的赌注是</p>
             <p class="secondline">请所有送鲜花的人吃饭</p>
         </div>
+        <button id="back"></button>
     </div>
     <button id="success"></button>
     <button id="fail"></button>
+    <div id="comment">
+        围观群众们：
+        <ul id="commentList">
+            <li class="singleComment">
+                <div class="smallFace"></div>
+                <div class="smallComment">弘：噢，怎么可能啊，骗人的~</div>
+                <div class="reply">回复</div>
+            </li>
+            <li class="singleComment">
+                <div class="smallFace"></div>
+                <div class="smallComment">弘：噢，怎么可能啊，骗人的~</div>
+                <div class="reply">回复</div>
+            </li>
+            <li class="singleComment">
+                <div class="smallFace"></div>
+                <div class="smallComment">弘：噢，怎么可能啊，骗人的~</div>
+                <div class="reply">回复</div>
+            </li>
+            <li class="singleComment">
+                <div class="smallFace"></div>
+                <div class="smallComment">弘：噢，怎么可能啊，骗人的~</div>
+                <div class="reply">回复</div>
+            </li>
+        </ul>
+    </div>
+    <div id="replyLine">
+        <input row="1"></input>
+        <button id="replyBTN">回复</button>
+    </div>
+    <div id="ad"><div id="logo"></div><a>来壹校招，挑战找工作</a><div>
     <script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="../js/record.js"></script>
 </body>
