--- a/html/initial.html
+++ b/html/initial.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../css/initial.css">
 </head>
 <body>
-	<button id="challengeSelf"></button>
-	<button id="challengeFriends"></button>
+	<button id="challengeSelf">挑战自己</button>
+	<button id="challengeFriends">挑战他人</button>
+	<div id="ad"><div id="logo"></div><a>来壹校招，挑战找工作</a><div>
 	<script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="../js/initial.js"></script>
     <script src="../js/bootstrap.min.js"></script>
