change the view of recieveBattleRecord

--- a/html/recieveBattleRecord.html
+++ b/html/recieveBattleRecord.html
@@ -23,7 +23,7 @@
         </div>
         <button id="back"></button>
     </div>
-    <div id="state">所有人都可以挑战</div>
+    <div id="state">接受挑战</div>
     <button id="success"></button>
     <button id="fail"></button>
     <div id="comment">
@@ -57,6 +57,6 @@
     </div>
     <div id="ad"><div id="logo"></div><a>来壹校招，挑战找工作</a><div>
     <script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="../js/battleRecord.js"></script>
+    <script type="text/javascript" src="../js/recievBattleRecord.js"></script>
 </body>
 </html>
